--- a/charts/zeebe-benchmark/values.yaml
+++ b/charts/zeebe-benchmark/values.yaml
@@ -59,6 +59,11 @@ workers:
     capacity: 60
     # Workers.benchmark.jobType defines the job type which should be used by the worker
     jobType: "benchmark-task"
+    # Workers.benchmark.payloadPath defines the path (inside the worker app) to the payload resource
+    # that should be used to complete the corresponding jobs
+    payloadPath: "bpmn/big_payload.json"
+    # Workers.benchmark.payloadPath defines the delay of the worker before completing a job
+    completionDelay: 300ms
     # Workers.benchmark.logLevel defines the logging level for the benchmark worker
     logLevel: "WARN"
     # Workers.benchmark.resources defines the resources for the benchmark worker
