feat: configure starter app
Extend starter values, such that we can better configure the
starter application.

New configuration allows to configure:

 * The bpmnModelPath which is used to read the main process model that is deployed on start up
 * The extra bpmn models which can be configured to add additional models
 * The business key, to add an unique identifier for each process instance with given var name
 * The payload path to configure with which payload the instances are created

--- a/charts/zeebe-benchmark/test/golden/starter-extended.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/starter-extended.golden.yaml
@@ -29,12 +29,13 @@ spec:
                 -Dapp.starter.rate=150
                 -Dapp.starter.durationLimit=0
                 -Dzeebe.client.requestTimeout=62000
-                -Dapp.starter.bpmnXmlPath= "bpmn/one_task.bpmn"
-                -Dapp.starter.businessKey="businessKey"
-                -Dapp.starter.payloadPath="bpmn/big_payload.json"
+                -Dapp.starter.bpmnXmlPath= "bpmn/real.bpmn"
+                -Dapp.starter.extraBpmnModels=[bpmn/extra.bpmn,bpmn/extra.dmn]
+                -Dapp.starter.businessKey="customerId"
+                -Dapp.starter.payloadPath="empty.json"
                 -XX:+HeapDumpOnOutOfMemoryError
             - name: LOG_LEVEL
-              value: "WARN"
+              value: "INFO"
           envFrom:
             - configMapRef:
                 name: starter-config
