--- a/charts/zeebe-benchmark/values.yaml
+++ b/charts/zeebe-benchmark/values.yaml
@@ -101,6 +101,18 @@ starter:
   replicas: 1
   # Starter.rate defines with which rate process instances should be created by the starter
   rate: 150
+  # Starter.logLevel defines the logging level for the benchmark starter
+  logLevel: "WARN"
+  # Starter.payloadPath defines the path (inside the starter app) to the payload resource
+  # that should be used to create the corresponding process instance
+  payloadPath: "bpmn/big_payload.json"
+  # Starter.bpmnXmlPath defines the path (inside the starter app) to the main bpmn XML resource that should be deployed
+  bpmnXmlPath: "bpmn/one_task.bpmn"
+  # Starter.extraBpmnModels can be used to specify paths (inside the starter app) to extra resources that should be deployed
+  extraResources: []
+  # Starter.businessKey can be used to specify a businessKey variable, inside a unique identifier is stored for
+  # each created process instance
+  businessKey: "businessKey"
 
 # Publisher configuration for the to be deployed publisher application
 publisher:
