--- a/charts/zeebe-benchmark/templates/starter.yaml
+++ b/charts/zeebe-benchmark/templates/starter.yaml
@@ -27,9 +27,23 @@ spec:
                 -Dapp.starter.rate={{ .Values.starter.rate }}
                 -Dapp.starter.durationLimit=0
                 -Dzeebe.client.requestTimeout=62000
+                {{- if .Values.starter.bpmnXmlPath }}
+                -Dapp.starter.bpmnXmlPath= {{ .Values.starter.bpmnXmlPath | quote }}
+                {{- end }}
+                {{- if .Values.starter.extraResources }}
+                -Dapp.starter.extraBpmnModels=[{{ join "," .Values.starter.extraResources }}]
+                {{- end }}
+                {{- if .Values.starter.businessKey }}
+                -Dapp.starter.businessKey={{ .Values.starter.businessKey | quote }}
+                {{- end }}
+                {{- if .Values.starter.payloadPath }}
+                -Dapp.starter.payloadPath={{ .Values.starter.payloadPath | quote }}
+                {{- end }}
                 -XX:+HeapDumpOnOutOfMemoryError
+            {{- if .Values.starter.logLevel }}
             - name: LOG_LEVEL
-              value: "warn"
+              value: {{ .Values.starter.logLevel | quote }}
+            {{- end }}
           envFrom:
             - configMapRef:
                 name: starter-config
