--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,4 +38,18 @@ jobs:
       run: make helm.repos-add
     - name: Test
       run: make go.test
-
+  auto-merge:
+    name: Auto-merge dependency PRs
+    runs-on: ubuntu-latest
+    needs: [ build ]
+    if: github.repository == 'zeebe-io/benchmark-helm' && (github.actor == 'dependabot[bot]' || github.actor == 'renovate[bot]')
+    permissions:
+      checks: read
+      pull-requests: write
+    steps:
+      - uses: actions/checkout@v4
+      - id: merge
+        name: Merge PR
+        run: gh pr merge ${{ github.event.pull_request.number }} --merge
+        env:
+          GITHUB_TOKEN: "${{ secrets.AUTO_MERGE_GITHUB_TOKEN }}"
