--- a/charts/zeebe-benchmark/templates/starter.yaml
+++ b/charts/zeebe-benchmark/templates/starter.yaml
@@ -27,8 +27,11 @@ spec:
                 -Dapp.starter.rate={{ .Values.starter.rate }}
                 -Dapp.starter.durationLimit=0
                 -Dzeebe.client.requestTimeout=62000
+                {{- if .Values.starter.processId }}
+                -Dapp.starter.processId={{ .Values.starter.processId | quote }}
+                {{- end }}
                 {{- if .Values.starter.bpmnXmlPath }}
-                -Dapp.starter.bpmnXmlPath= {{ .Values.starter.bpmnXmlPath | quote }}
+                -Dapp.starter.bpmnXmlPath={{ .Values.starter.bpmnXmlPath | quote }}
                 {{- end }}
                 {{- range $index, $value := .Values.starter.extraResources }}
                 -Dapp.starter.extraBpmnModels.{{ $index }}={{ $value | quote }}
