--- a/charts/zeebe-benchmark/templates/clients-service.yaml
+++ b/charts/zeebe-benchmark/templates/clients-service.yaml
@@ -28,5 +28,5 @@ spec:
   - honorLabels: true
     # since - is not supported directly, we have to use the index function and quote "camunda-platform"
     interval: {{ index .Values "camunda-platform" "prometheusServiceMonitor" "scrapeInterval" }}
-    path: /actuator/prometheus
+    path: /prometheus
     port: http
